Dockerizacion microservicio en postgreSQL
