# Administration_one_microservice/storage/api-docs/api-docs.json
@@ -8,7 +8,7 @@
         },
         "version": "1.0.0"
     },
-    "host": "localhost:8000",
+    "host": "0.0.0.0:4194",
     "basePath": "",
     "schemes": [
         "http",
@@ -19,14 +19,6 @@
             "get": {
                 "summary": "Get All parking lots created by the application user",
                 "operationId": "getAllParkingLots",
-                "parameters": [
-                    {
-                        "name": "getall",
-                        "in": "path",
-                        "required": false,
-                        "type": "string"
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "successful operation"
@@ -52,15 +44,23 @@
                         "required": true,
                         "schema": {
                             "properties": {
-                                "id-owner": {
+                                "id_owner": {
                                     "type": "integer",
                                     "example": "5324"
                                 },
-                                "id-client": {
-                                    "type": "integer",
+                                "id_client": {
+                                    "type": "string",
                                     "example": "123"
                                 },
-                                "Location": {
+                                "latitude": {
+                                    "type": "string",
+                                    "example": "-30"
+                                },
+                                "longitude": {
+                                    "type": "string",
+                                    "example": "30"
+                                },
+                                "location": {
                                     "type": "string",
                                     "example": "cll40kra32"
                                 },
@@ -129,15 +129,23 @@
                         "required": true,
                         "schema": {
                             "properties": {
-                                "id-owner": {
+                                "id_owner": {
                                     "type": "integer",
                                     "example": "5324"
                                 },
-                                "id-client": {
-                                    "type": "integer",
+                                "id_client": {
+                                    "type": "string",
                                     "example": "123"
                                 },
-                                "Location": {
+                                "latitude": {
+                                    "type": "string",
+                                    "example": "-30"
+                                },
+                                "longitude": {
+                                    "type": "string",
+                                    "example": "30"
+                                },
+                                "location": {
                                     "type": "string",
                                     "example": "cll40kra32"
                                 },
